Changes for pd256_plus: Removing functions that should have appeared under specific debugging flag. Changes for ts_pd512: Only cosmetics. Current settings seems competative.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ PD_Filter/Dict512/Comparing-searches.txt
 packed_spare (backup before changing hash function).hpp
 Helpfull-Commands.txt
 temp_res.txt
+cuckoofilter/src/Important benching resuts.txt
